// Copyright (c) 2023 - Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate e2e tests,
// which are released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/e2e/blob/main/LICENSE

syntax = "proto3";

option java_package = "dev.restate.e2e.services.receiver";
option java_outer_classname = "ReceiverProto";

import "google/protobuf/empty.proto";
import "dev/restate/ext.proto";

package coordinator;

service Receiver {
  option (dev.restate.ext.service_type) = KEYED;

  rpc Ping(PingRequest) returns (Pong);
  rpc SetValue(SetValueRequest) returns (google.protobuf.Empty);
  rpc GetValue(GetValueRequest) returns (GetValueResponse);
}

message PingRequest {
  string key = 1 [(dev.restate.ext.field) = KEY];
}

message Pong {
  string message = 1;
}

message SetValueRequest {
  string key = 1 [(dev.restate.ext.field) = KEY];

  string value = 2;
}

message GetValueRequest {
  string key = 1 [(dev.restate.ext.field) = KEY];
}

message GetValueResponse {
  string value = 1;
}